Roll back on JDK9+ module stuff in Kotlin, experiment with direct processor instrementation
qqq